# Suture

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  SYSTEM_DESIGN.md
examples/: basic_usage.py  slack_config.yaml
suture/: __init__.py
suture/cli/: main.py
suture/core/: config.py  scraper.py
